# expense-manager

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  migration-instructions.md  pyproject.toml  run_app.py
.devcontainer/: devcontainer.json  postStartCommand.sh
config/: development.yaml  production.yaml
expense_manager/: __init__.py  app.py  cli.py  config.py
expense_manager/auth/: __init__.py  auth_manager.py
expense_manager/db/: __init__.py  db_manager.py
expense_manager/pages/: __init__.py  balances.py  categories.py  dashboard.py  expenses.py  flow.py  income.py  payment_sources.py  profile.py  transfers.py
expense_manager/utils/: __init__.py  analytics.py  models.py
